[package]
name = "general_stable_vec"
description = "A Vec implementation with stable indices"
keywords = ["general", "generic", "stable", "vec"]
repository = "https://github.com/ISibboI/general_stable_vec"
version = "0.12.2"
edition = "2021"
rust-version = "1.75.0"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }
